--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "surge": "^0.24.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
