--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
     "surge": "^0.24.6"
   },
