--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-tabs": "^6.1.0",
+    "recharts": "^2.15.3",
     "sort-by": "^1.2.0",
     "surge": "^0.24.6"
   },
